--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
+//        multiDexEnabled true
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -30,9 +31,8 @@ android {
 
 dependencies {
 
-//    implementation'com.android.support:appcompat-v7:21.0.3'
-
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+//    implementation 'androidx.appcompat:appcompat:1.3.1'
+//    implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'org.jetbrains:annotations:15.0'
